k8s/postiz/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postiz
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postiz-ingress
  namespace: postiz
spec:
  rules:
    - host: postiz.wayl.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postiz
                port:
                  number: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postiz
  namespace: postiz
spec:
  replicas: 0
  selector:
    matchLabels:
      service: postiz
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        service: postiz
      annotations:
        diun.enable: "true"
    spec:
      # todo change to readwrite many volumes
      nodeSelector:
        kubernetes.io/hostname: falcon1
      containers:
        - name: postiz
          # image: ghcr.io/gitroomhq/postiz-app:v1.43.0
          image: ghcr.io/gitroomhq/postiz-app:v1.39.1
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: postiz-config
            - mountPath: /uploads
              name: postiz-uploads
      volumes:
        - name: postiz-config
          persistentVolumeClaim:
            claimName: postiz-config
        - name: postiz-uploads
          persistentVolumeClaim:
            claimName: postiz-uploads
---
apiVersion: v1
kind: Service
metadata:
  name: postiz
  namespace: postiz
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    service: postiz
---
apiVersion: v1
kind: Service
metadata:
  name: postiz-redis
  namespace: postiz
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    service: postiz-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postiz-redis
  namespace: postiz
spec:
  replicas: 0
  selector:
    matchLabels:
      service: postiz-redis
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        service: postiz-redis
      annotations:
        diun.enable: "true"
    spec:
      containers:
        - name: postiz-redis
          image: redis:7.2
          livenessProbe:
            exec:
              command:
                - redis-cli ping
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 3
          volumeMounts:
            - mountPath: /data
              name: postiz-redis-data
      restartPolicy: Always
      volumes:
        - name: postiz-redis-data
          persistentVolumeClaim:
            claimName: postiz-redis-data
